# learningcpp

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/games/: calculator.cpp  games.h  lorem_world.cpp
src/util/: util.cpp  util.h
